--- a/src/index.css
+++ b/src/index.css
@@ -10,20 +10,24 @@ body {
 
 .home-page .top-header {
   /* display: flex; */
-  display:block;
+  display: block;
   background: rgba(0, 0, 0, 0.078);
 }
 
-.top-header{
+.top-header {
   display: none;
   background: rgba(0, 0, 0, 0.078);
 
 }
-.site-header {
-  background: rgb(131,58,180);
-  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(0,146,246,1) 0%, rgba(21,110,179,1) 65%, rgba(217,205,205,1) 100%);}
 
-.home-page .site-header{
+.site-header {
+  position: relative;
+  z-index: 1;
+  background: rgb(131, 58, 180);
+  background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(0, 146, 246, 1) 0%, rgba(21, 110, 179, 1) 65%, rgba(217, 205, 205, 1) 100%);
+}
+
+.home-page .site-header {
   background: transparent;
 }
 
@@ -45,12 +49,14 @@ header {
 }
 
 .home {
-  height: 80vh;
-  margin-top: -138px;
+  display: flex;
+  align-items: center;
+  /* height: 100vh; */
+  /* margin-top: -138px; */
 }
 
 .home-left {
-  margin-top: 130px;
+  margin-top: 180px;
 }
 
 .home .social-wrapper a {
@@ -108,8 +114,9 @@ header {
 
 .todo {
   margin-top: 6%;
-  padding:2rem;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;}
+  padding: 2rem;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
 
 .todo-item {
   display: flex !important;
@@ -130,20 +137,22 @@ header {
 .todo-item-content h1 {
   font-size: 52px;
 }
-.todo .read-more-wrapper button{
-  background-color:#0B7FD3;
+
+.todo .read-more-wrapper button {
+  background-color: #0B7FD3;
 }
 
 
 .slick-next:before {
   content: '→';
-  color: #041928!important;
+  color: #041928 !important;
 }
 
 .slick-prev:before {
   content: '→';
-  color: #041928!important;
+  color: #041928 !important;
 }
+
 .slick-track img {
   min-height: 220px;
   max-height: 340px;
@@ -159,6 +168,73 @@ header {
   height: 24px !important;
 }
 
-.todo-item-img img{
+.todo-item-img img {
   border-radius: 6px;
+}
+
+
+/* Gallery Items */
+.gallery-items {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 1rem;
+}
+
+.gallery-container {
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+}
+
+.gallery-item {
+  grid-column: span 3;
+  min-height: 180px;
+  max-height: 200px;
+  height: 100%;
+}
+
+.gallery-wrapper .page-title {
+  position: relative;
+  color: #054d82;
+  margin-bottom: 42px;
+  text-align: center;
+}
+
+
+
+.gallery-item .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.gallery-item img {
+  object-fit: cover;
+  width: 100%;
+}
+
+.gallery-item .overlay:hover {
+  background-color: #021b2c88;
+
+}
+
+.gallery-item-content,
+.gallery-item .overlay {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+}
+
+.gallery-item-content {
+  background-color: #0c53864a;
+}
+
+
+
+.gallery-item-content h2 {
+  background-color: #04253ada;
+  border-radius: 4px;
+  color: #fff;
 }
